# travel-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  model_errors.py  pyproject.toml  server.py
.claude/: settings.json
.claude/agents/: adk-architect.md  gcp-deployer.md
.claude/skills/adk-agent-pattern/: SKILL.md
.claude/skills/deploy-cloud-run/: SKILL.md
.claude/skills/gcp-smoke-test/: SKILL.md  smoke-test.sh
.claude/skills/run-adk-local/: SKILL.md
.github/workflows/: deploy.yml
agents/: model.py
agents/fare_prep/: __init__.py  agent.py  schemas.py
agents/finalizer/: agent.py  assembler.py  schemas.py
agents/intake/: agent.py  schemas.py
agents/orchestrator/: __init__.py  agent.py  schemas.py
agents/policy/: agent.py  assembler.py  rules.py  schemas.py
docs/: ARCHITECTURE.md  CLOUD-READINESS.md  DECISIONS.md  DEPLOY.md  LESSONS.md
eval/: README.md  fare_prep.evalset.json  intake.evalset.json  policy.evalset.json
scripts/: setup-gcp.sh  setup-wif.sh  teardown.sh
tests/: test_clock.py  test_contract.py  test_evals.py  test_fare_request.py  test_finalizer_assembler.py  test_intake_schemas.py  test_model_resilience.py  test_policy.py  test_policy_assembler.py
tools/: clock.py  fare_request.py  policy.py
