[project]
name = "travel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samir Tamang", email = "samirllama@gmail.com" }
]
requires-python = ">=3.12.11"
dependencies = [
    "fastapi>=0.138.0",
    "google-adk[a2a,mcp]>=2.0.0,<3.0.0",
    "google-auth>=2.55.0",
    "google-genai>=2.9.0",
    "httpx>=0.28.1",
    "pytest-asyncio==1.4.0",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# Tests import from the repo root (e.g. `from tools.fare_request import ...`),
# so put the project root on sys.path during collection.
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
